[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Platform/Platform.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Multiplayer/Spawn/CoopPlayereSpawnPointSafeZone.gd" type="Script" id=2]
[ext_resource path="res://src/Multiplayer/Spawn/CoopPlayerSpawnPoint.gd" type="Script" id=3]
[ext_resource path="res://src/Multiplayer/Players/CoopPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/Commons/AtlasIcon/GamepadAtlasIcon.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/theme/player_hud.tres" type="Theme" id=6]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GamepadAtlasIcon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "available"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.152941 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "unavailable"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.152941 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GamepadAtlasIcon:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5, 20 )

[node name="CoopPlayerSpawnPoint" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "unavailable"
anims/RESET = SubResource( 3 )
anims/available = SubResource( 4 )
anims/unavailable = SubResource( 2 )

[node name="SafeCheckTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DelayTimer" type="Timer" parent="."]

[node name="CoopPlayer" parent="." instance=ExtResource( 4 )]
position = Vector2( -1, -12 )

[node name="Platform" parent="." instance=ExtResource( 1 )]
collision_layer = 512
collision_mask = 512
motion/sync_to_physics = false

[node name="SafeZone" type="Area2D" parent="."]
position = Vector2( -1, -15 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafeZone"]
position = Vector2( 0.5, -14 )
shape = SubResource( 1 )

[node name="GamepadAtlasIcon" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = -8.0
margin_top = -71.0
margin_right = 24.0
margin_bottom = -55.0
action = "jump_0"

[node name="DelayLabel" type="Label" parent="."]
margin_left = -20.0
margin_top = -67.0
margin_right = 20.0
margin_bottom = -53.0
theme = ExtResource( 6 )
text = "0"
align = 1
valign = 1
